--- a/index.html
+++ b/index.html
@@ -42,7 +42,9 @@
         }
 
         nav {
-            background: rgba(0, 0, 0, 0.6);
+            font-family: fantasy;
+            font-weight: bold;
+            background: black;
             padding: 1rem 0;
             text-align: center;
             position: sticky;
@@ -73,6 +75,7 @@
         }
 
         .intro-section {
+            font-family: Georgia, 'Times New Roman', Times, serif;
             background: rgb(0, 0, 0);
             padding: 2rem;
             border-radius: 15px;
@@ -82,6 +85,7 @@
         }
 
         .intro-section h2 {
+            font-family: cursive;
             color: #11ff00;
             margin-bottom: 1rem;
             font-size: 2rem;
@@ -103,7 +107,7 @@
         }
 
         .hobby-section h2 {
-            font-family: ;
+            font-family: Georgia, 'Times New Roman', Times, serif;
             color: #fd0000;
             margin-bottom: 1.5rem;
             font-size: 2rem;
@@ -120,6 +124,7 @@
         }
 
         .hobby-card {
+            font-family: cursive;
             background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
             padding: 1.5rem;
             border-radius: 10px;
@@ -128,7 +133,9 @@
         }
 
         .hobby-card:hover {
-            box-shadow: 0 10px 25px rgba(0, 0, 0, 0.3);
+            background: gold;
+            color: black;
+            box-shadow: 5px 5px 50px black;
         }
 
         .hobby-card h3 {
@@ -137,7 +144,8 @@
         }
 
         .hobby-card p {
-            font-size: 0.95rem;
+            font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+            font-size: 1.2rem;
             line-height: 1.6;
         }
 
@@ -147,6 +155,7 @@
         }
 
         .skills-list li {
+            font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
             background: rgba(255, 255, 255, 0.2);
             padding: 0.5rem 1rem;
             margin: 0.5rem 0;
